--- a/src/assets/style/newarrivals.scss
+++ b/src/assets/style/newarrivals.scss
@@ -5,6 +5,10 @@
     padding: 50px 30px;
 }
 
+.new-arrivals-content {
+    position: relative;
+}
+
 .new-arrivals-sec h2 {
     font-size: 35px;
     padding: 15px;
