--- a/src/assets/style/bestseller.scss
+++ b/src/assets/style/bestseller.scss
@@ -1,4 +1,30 @@
+.best-seller-content {
+    position: relative;
+}
+
 .best-seller-content img {
     margin: 50px auto;
     width: calc(100% / 5);
+}
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    width: 25px;
+    height: 50px;
+    background-color: rgba(133, 133, 133, 0.5);
+    color: white;
+    text-align: center;
+    line-height: 50px;
+    font-size: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.prev {
+    left:10px;
+}
+
+.next {
+    right:10px;
 }
